# llm-graph-builder-lite

./: Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  score.py
src/: QA_integration.py  graphDB_dataAccess.py  llm.py  logger.py  main.py
src/document_sources/: local_file.py
src/shared/: common_fn.py  constants.py
