[project]
name = "llm-graph-builder-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.12.0",
    "asyncio==4.0.0",
    "certifi==2025.8.3",
    "chardet==5.2.0",
    "fastapi==0.116.1",
    "fastapi-health==0.4.0",
    "graphdatascience==1.18a1",
    "gunicorn==23.0.0",
    "json-repair==0.44.1",
    "langchain==1.1.2",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.5",
    "langchain-experimental==0.4.0",
    "langchain-neo4j==0.6.0",
    "langchain-text-splitters==1.0.0",
    "langdetect==1.0.9",
    "langserve==0.3.3",
    "langsmith==0.4.55",
    "neo4j-rust-ext==5.28.2.1",
    "nltk==3.9.1",
    "pip-install==1.3.5",
    "psutil==7.0.0",
    "pydantic==2.12.5",
    "pymupdf==1.26.4",
    "pypandoc==1.15",
    "pypandoc-binary==1.15",
    "pypdf2==3.0.1",
    "python-dotenv==1.1.1",
    "python-magic==0.4.27",
    "ragas==0.4.0",
    "rouge-score==0.1.2",
    "secweb==1.25.2",
    "sse-starlette==3.0.2",
    "starlette==0.47.3",
    "starlette-session==0.4.3",
    "tqdm==4.67.1",
    "unstructured-client==0.42.3",
    "unstructured-inference==1.0.5",
    "unstructured[all-docs]==0.18.14",
    "urllib3==2.6.2",
    "uvicorn==0.35.0",
    "wikipedia==1.4.0",
    "wrapt==1.17.3",
    "yarl==1.20.1",
    "youtube-transcript-api==1.2.2",
    "zipp==3.23.0",
]
