[project]
name = "llm-graph-builder-lite"
version = "0.1.0"
description = "Lightweight local-first LLM Graph Builder using Ollama"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet==5.2.0",
    "fastapi==0.116.1",
    "fastapi-health==0.4.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.5",
    "langchain-experimental==0.4.0",
    "langchain-neo4j==0.6.0",
    "langchain-text-splitters==1.0.0",
    "neo4j-rust-ext==5.28.2.1",
    "pydantic==2.12.5",
    "pymupdf==1.26.4",
    "python-dotenv==1.1.1",
    "secweb==1.25.2",
    "sse-starlette==3.0.2",
    "starlette==0.47.3",
    "starlette-session==0.4.3",
    "uvicorn==0.35.0",
]
